fixed issues after cherry-picking from master