@@ -12,6 +12,7 @@ import org.elasticsearch.rest.RestRequest;
 import org.elasticsearch.rest.action.RestToXContentListener;
 
 import java.io.IOException;
+import java.util.Collections;
 import java.util.List;
 
 public class RestCreateDataStreamAction extends BaseRestHandler {
@@ -23,7 +24,7 @@ public class RestCreateDataStreamAction extends BaseRestHandler {
 
     @Override
     public List<Route> routes() {
-        return List.of(new Route(RestRequest.Method.PUT, "/_data_stream/{name}"));
+        return Collections.singletonList(new Route(RestRequest.Method.PUT, "/_data_stream/{name}"));
     }
 
     @Override
